# Athena

./: Board.cpp  CMakeLists.txt  ChessGUI.cpp  ChessGUI.h  ChessGame.h  MoveGenerator.cpp  Outcomes.cpp  README.md  UCI.cpp  book.txt
src/: Athena.cpp  Athena.h  Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  ChessGame.cpp  ChessGame.h  ChessPosition.h  Constants.h  DataTypes.h  Eval.cpp  Eval.h  MoveData.h  MoveGeneration.cpp  MoveGeneration.h  MoveGenerator.cpp  MoveGenerator.h  Outcomes.cpp  Outcomes.h  SquarePieceTables.h  TranspositionHashEntry.h  UCI.cpp  UCI.h  ZobristKey.cpp  ZobristKey.h  ZobristKeyGenerator.cpp  ZobristKeyGenerator.h  main.cpp  utils.cpp  utils.h
